Due to Backout files marked for add could not show latest revision forcing me to submit this change directly though p4v. Swarm review [at] https://p4-swarm.epicgames.net/reviews/25450246
Added functionality to strip at ratios higher 1 out of every 2. testing shows good savings at stripping 2/3 frames on Nx64 and in editor of around 8mb with no noticeable visual degradation.
Origional Cvar ssytem replaced with VariableFrameStrippingSettings Oject which is a member of AnimSequence. It contains PerPlatform variables for enableing the system and its rate.
The move to a member object wrapping around these settings were two fold. First to better mas change anim sequences by platform while also allowing for varried settings for edge cases. Second becuase due to the fact this affects objects in the cook, gateing it behind a cvar provides no hot fix saftey while hurting useability.

[CL 25518666 by nick baltis in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -3207,6 +3207,7 @@ BoneTimecodeCustomAttributeNameSettings=(HourAttributeName="TCHour",MinuteAttrib
 BoneCompressionSettings="/ACLPlugin/ACLAnimBoneCompressionSettings"
 AnimationRecorderBoneCompressionSettings="/Engine/Animation/DefaultRecorderBoneCompression"
 CurveCompressionSettings="/Engine/Animation/DefaultAnimCurveCompressionSettings"
+VariableFrameStrippingSettings="/Engine/Animation/DefaultVariableFrameStrippingSettings"
 
 [/Script/Engine.MeshSimplificationSettings]
 r.MeshReductionModule="QuadricMeshReduction"
