Add fallback default bone compression settings in case ACLPlugin is disabled
#jira UE-165465
#rb Thomas.Sarkanen
#preflight 646636962a6112ae70f02291

[CL 25525649 by Nicholas Frechette in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -3203,8 +3203,13 @@ bStripAnimationDataOnDedicatedServer=False
 BoneTimecodeCustomAttributeNameSettings=(HourAttributeName="TCHour",MinuteAttributeName="TCMinute",SecondAttributeName="TCSecond",FrameAttributeName="TCFrame",SubframeAttributeName="TCSubframe",RateAttributeName="TCRate",TakenameAttributeName="Takename")
 
 [Animation.DefaultObjectSettings]
+; Fallback is used only if the default codec isn't found (e.g. if the plugin isn't enabled)
+BoneCompressionSettingsFallback="/Engine/Animation/DefaultAnimBoneCompressionSettings"
+; Default codec assigned when new sequences are imported/created
 BoneCompressionSettings="/ACLPlugin/ACLAnimBoneCompressionSettings"
+; Default codec for the animation recorder
 AnimationRecorderBoneCompressionSettings="/Engine/Animation/DefaultRecorderBoneCompression"
+; Default codec assigned when new sequences are imported/created
 CurveCompressionSettings="/Engine/Animation/DefaultAnimCurveCompressionSettings"
 
 [/Script/Engine.MeshSimplificationSettings]
