Support VRS for desktop Vulkan via the VK_KHR_fragment_shading_rate extension.
#jira UE-130115
#rb jeannoe.morissette
#preflight 64666081a133ca477bbf08e2
#preflight 64665acbec5109088b37a84e

[CL 25533897 by christopher fiala in ue5-main branch]

--- a/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
@@ -112,7 +112,7 @@ bSupportsGen5TemporalAA=true
 bSupportsPerPixelDBufferMask = false
 
 
-bSupportsVariableRateShading = false
+bSupportsVariableRateShading = true
 
 NumberOfComputeThreads = 64
 
@@ -228,7 +228,7 @@ bSupportsGen5TemporalAA=true
 ; //#todo-vulkanddpi
 bSupportsPerPixelDBufferMask = false
 
-bSupportsVariableRateShading = false
+bSupportsVariableRateShading = true
 
 NumberOfComputeThreads = 64
 
