MassLWI plugin added. It aims to host all LWI-related Mass bits.
#rb none;experimental
#preflight 64663f5b36605222001c71a1

[CL 25534663 by mieszko zielinski in ue5-main branch]

--- a/Engine/Plugins/Runtime/MassGameplay/MassGameplay.uplugin
+++ b/Engine/Plugins/Runtime/MassGameplay/MassGameplay.uplugin
@@ -74,6 +74,10 @@
 			"Type": "Runtime"
 		},
 		{
+			"Name": "MassLWI",
+			"Type": "Runtime"
+		},
+		{
 			"Name": "MassGameplayTestSuite",
 			"Type": "UncookedOnly",
 			"LoadingPhase": "Default"
